rate limits added (commented)

--- a/info.yaml
+++ b/info.yaml
@@ -34,3 +34,11 @@ description: |
    В ответ на вебхуки [**[POST] Авторизация пользователя**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1verify%2Fpost), [**[POST] Регистрация учётной записи**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1create%2Fpost) и [**[POST] Активация / деактивация тарифа**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1tariff%2Fpost), сторонний сервис сообщает облаку Эвотор *токен пользователя*, который необходим, чтобы авторизовать все остальные вебхуки Эвотора.
 
    Сторонний веб-сервис также может обращаться в облако Эвотор за дополнительной информацией. Токен для авторизации таких запросов Эвотор передаёт в вебхуке  [**[POST] Передача токена приложения**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1token%2Fpost).
+
+   # Ограничения
+
+   С сентября 2017 вводятся ограничения запросов к REST API Облака Эвотор. Ко всем ответам 200OK от Облака Эвотор будут добавлены следующие заголовки:
+
+     * `X-RateLimit-Limit` – Максимальное количество запросов, которые вы можете сделать в текущем временном интервале.
+     * `X-RateLimit-Remaining` – Количество запросов, оставшихся в текущем временном интервале.
+     * `X-RateLimit-Reset` – Время, оставшееся до начала нового временного интервала. В секундах UTC.
