Get stores fixed

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -536,16 +536,38 @@ store:
   properties:
     uuid:
       type: string
-      description: >-
-        Уникальный идентификатор магазина в облаке Эвотор, в формате uuid4. Не может содержать пустую строку или принимать значение `null`.
+      description: |
+        Уникальный идентификатор магазина в Облаке Эвотор.
+
+        Формат – `uuid4`.
+
+        Не может содержать пустую строку или принимать значение `null`.
+      example: 20170228-F4F1-401B-80FA-9ECCA8451FFB
       pattern: >-
         ^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-5][0-9a-fA-F]{3}-[89aAbB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}$
-    name:
-      type: string
-      description: Имя магазина в платформе Эвотор. Не может содержать пустую строку или принимать значение `null`.
     address:
       type: string
-      description: Адрес магазина в платформе Эвотор.
+      nullable: true
+      description: |
+        Адрес магазина, который пользователь указал в Личном кабинете.
+
+        Может быть `null`.
+      example: Россия, Москва, Старопанский переулок
+    name:
+      type: string
+      description: |
+         Имя магазина, которое пользователь указал в Личном кабинете.
+
+         Не может содержать пустую строку или принимать значение `null`.
+      example: Мой магазин
+    code:
+      type: string
+      nullable: true
+      description: |
+         Облако Эвотор не использует это поле. Поле необходимо для сопоставления сущностей, если сторонняя система не может оперировать идентификатором.
+
+         Может быть `null`.
+      example: "null"
 
 
 document:
