--- a/definitions.yaml
+++ b/definitions.yaml
@@ -486,39 +486,67 @@ employee:
     uuid:
       type: string
       description: |
-        Уникальный идентификатор сотрудника в платформе Эвотор, в формате uuid4. Не может содержать пустую строку или принимать значение `null`.
+        Уникальный идентификатор сотрудника в Облаке Эвотор.
+
+        Формат – `uuid4`.
+
+        Не может содержать пустую строку или принимать значение `null`.
       pattern: >-
         ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+      example: 20170222-5670-4067-8017-FF5F40A1A23E
     name:
       type: string
-      description: Имя сотрудника в платформе Эвотор. Не может содержать пустую строку или принимать значение `null`.
+      description: |
+        Имя сотрудника, которое пользователь указал в Личном кабинете.
+
+        Не может содержать пустую строку или принимать значение `null`.
+      example: Иван
     lastName:
       type: string
-      description: Фамилия сотрудника в платформе Эвотор.
+      description: |
+        Фамилия сотрудника, которую пользователь указал в Личном кабинете.
+
+        Может быть `null`.
+      example: Иванов
     patronymicName:
       type: string
-      description: Отчество сотрудника в платформе Эвотор.
+      nullable: true
+      description: |
+        Отчество сотрудника, которое пользователь указал в Личном кабинете.
+
+        Может быть `null`.
+      example: "null"
     phone:
       type: number
-      description: Номер телефона сотрудника в платформе Эвотор.
+      nullable: true
+      description: |
+        Номер телефона сотрудника в платформе Эвотор.
+
+        Может быть `null`.
       pattern: '^7[0-9]{10}$'
       example: 79876543210
+    code:
+      type: string
+      nullable: true
+      description: |
+         Облако Эвотор не использует это поле. Поле необходимо для сопоставления сущностей, если сторонняя система не может оперировать идентификатором.
+
+         Может быть `null`.
+      example: "null"
     stores:
       type: array
-      description: Массив идентификаторов магазинов, к которым привязан идентификатор сотрудника.
+      description: Массив идентификаторов магазинов, которым соответствует идентификатор сотрудника. В Личном кабинете, пользователь выбирает магазины, где работает сотрудник.
       items:
         type: object
         properties:
           storeUuid:
-            type: string
-            description: |
-              Уникальный идентификатор магазина в платформе Эвотор, в формате uuid4. Не может содержать пустую строку или принимать значение `null`.
-            pattern: >-
-              ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+            $ref: '#/store/properties/uuid'
     role:
       type: string
       description: |
-        Роль, которая задаёт права доступа сотрудника. В зависимости от прав, сотрудники имеют доступ к различным функциям смарт-терминала:
+        Роль, которая задаёт права доступа сотрудника. Роль сотрудника выбирает пользователь в Личном кабинете.
+
+        В зависимости от прав, сотрудники имеют доступ к различным функциям смарт-терминала:
           * ADMIN – предустановленная роль администратора с полным доступом к функциям смарт-терминала.
           * CASHIER – предустановленнная роль кассира с ограниченным доступом к функциям смарт-терминала.
           * MANUAL – роль, которую пользователь создал вручную.
