--- a/definitions.yaml
+++ b/definitions.yaml
@@ -503,6 +503,7 @@ employee:
       example: Иван
     lastName:
       type: string
+      x-nullable: true
       description: |
         Фамилия сотрудника, которую пользователь указал в Личном кабинете.
 
@@ -510,7 +511,7 @@ employee:
       example: Иванов
     patronymicName:
       type: string
-      nullable: true
+      x-nullable: true
       description: |
         Отчество сотрудника, которое пользователь указал в Личном кабинете.
 
@@ -527,7 +528,7 @@ employee:
       example: 79876543210
     code:
       type: string
-      nullable: true
+      x-nullable: true
       description: |
          Облако Эвотор не использует это поле. Поле необходимо для сопоставления сущностей, если сторонняя система не может оперировать идентификатором.
 
@@ -575,7 +576,7 @@ store:
         ^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-5][0-9a-fA-F]{3}-[89aAbB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}$
     address:
       type: string
-      nullable: true
+      x-nullable: true
       description: |
         Адрес магазина, который пользователь указал в Личном кабинете.
 
@@ -590,7 +591,7 @@ store:
       example: Мой магазин
     code:
       type: string
-      nullable: true
+      x-nullable: true
       description: |
          Облако Эвотор не использует это поле. Поле необходимо для сопоставления сущностей, если сторонняя система не может оперировать идентификатором.
 
