device description fixed

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -665,19 +665,31 @@ device:
   properties:
     uuid:
       type: string
-      description: Уникальный идентификатор смарт-терминала в платформе Эвотор, в формате uuid4.
+      description: |
+        Уникальный идентификатор смарт-терминала в Облаке Эвотор.
+
+        Формат -- `uuid4`.
       pattern: >-
         ^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-5][0-9a-fA-F]{3}-[89aAbB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}$
+      example: 20170222-D58C-40E0-8051-B53ADFF38860
+    code:
+      $ref: '#/store/properties/code'
     name:
       type: string
-      description: Имя смарт-терминала в платформе Эвотор. Не может содержать пустую строку или принимать значение `null`.
-      minLength: 1
+      description: |
+        Имя смарт-терминала, которое пользователь дал устройству в Личном кабинете.
+
+        Не может содержать пустую строку или принимать значение `null`.
+      example: Моя касса №3
     storeUuid:
-      type: string
-      description: >-
-        Уникальный идентификатор магазина в платформе Эвотор, к которому привязан смарт-терминал. Формат идентификатора - uuid4. Не может содержать пустую строку или принимать значение `null`.
-      pattern: >-
-        ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+      $ref: '#/store/properties/uuid'
+    timezoneOffset:
+      type: integer
+      description: |
+         Часовой пояс, в котором работает смарт-терминал.
+
+         Не может быть `null`.
+      example: 10800000
 
 
 commodity:
