code ref + spelling correction

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -527,13 +527,7 @@ employee:
       pattern: '^7[0-9]{10}$'
       example: 79876543210
     code:
-      type: string
-      x-nullable: true
-      description: |
-         Облако Эвотор не использует это поле. Поле необходимо для сопоставления сущностей, если сторонняя система не может оперировать идентификатором.
-
-         Может быть `null`.
-      example: "null"
+      $ref: '#/store/properties/code'
     stores:
       type: array
       description: Массив идентификаторов магазинов, которым соответствует идентификатор сотрудника. В Личном кабинете, пользователь выбирает магазины, где работает сотрудник.
@@ -593,7 +587,7 @@ store:
       type: string
       x-nullable: true
       description: |
-         Облако Эвотор не использует это поле. Поле необходимо для сопоставления сущностей, если сторонняя система не может оперировать идентификатором.
+         Облако Эвотор не использует это поле. Поле необходимо для сопоставления сущностей, если сторонняя система не работает с идентификаторами.
 
          Может быть `null`.
       example: "null"
